Fixed overly large figures on mobile portfolio page

--- a/styles.css
+++ b/styles.css
@@ -232,8 +232,8 @@
   }
 
   figure {
-    width: 15em;
-    height: 15em;
+    width: 10em;
+    height: 10em;
     border: 2px solid black;
   }
 
